kapp-packaging/source/ingress.yaml
#@ load("@ytt:data", "data")
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: #@ data.values.namespace
  labels:
    app: ingress
spec:
  rules:
  - host: #@ "kuard." + data.values.namespace + "." + data.values.base_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 8080
